# university_labs

semester_5/numerical_analysis/lab_2/: AvgErrorUtil.h  BandMatrix.h  BandMatrixT.h  CMakeLists.txt  TransposedBandMatrixT.h  Vector.h  main.cpp  отчет_дорохов_чм.docx
semester_5/numerical_analysis/lab_3/: CMakeLists.txt  InverseIterationsMethod.h  MatrixGenerator.h  TapeMatrix.h  Test.cpp  UtilityFunctions.cpp  UtilityFunctions.h  main.cpp  отчет_дорохов_чм.docx
semester_5/numerical_analysis/lab_4/: CMakeLists.txt  Smoother.h  main.cpp
semester_5/parallel_programming/pp_lab_4/: CMakeLists.txt  ThreadPool.h  main.cpp
semester_6/numeric_analysis/lab4/: Cargo.toml  dorokhov_lab_4_report.docx  test1.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt
semester_6/numeric_analysis/lab4/src/: main.rs
semester_6/numeric_analysis/lab5/: accuracy_check  dorokhov_lab_5_report.docx  inaccurate  invalid_steps  large_interval  negative_epsilon  reverse  rez  small_interval  stiff_problem
semester_6/numeric_analysis/lab5/src/: main.rs
semester_6/patterns/lab1/: pom.xml
semester_6/patterns/lab1/src/main/java/ru/mehoil/: Main.java
semester_6/patterns/lab2/: pom.xml
semester_6/patterns/lab2/files/: 1st.txt  firstFile.txt  john.txt  scndFile.txt  uniqueFile.txt  xlastFile.txt
semester_6/patterns/lab2/src/main/java/ru/mehoil/: FileCapitalizeProcessor.java  FileCapitalizer.java  FileFinderProcessor.java  FileProcessor.java  FileWordsMatcher.java  Main.java  ReadFile.java
semester_6/patterns/lab3/: pom.xml
(+25 files in other folders)
